# screenshot-lite

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
docs/: privacy-and-redaction.md  windows-qa.md  windows-smoke-test.md
scripts/: build-windows-installer.ps1  install-windows.ps1  package-windows.ps1  test-package-windows.ps1  uninstall-windows.ps1
src/: capture.rs  cli.rs  clipboard.rs  config.rs  editor.rs  file_action.rs  history.rs  interactive.rs  main.rs  paths.rs  preview.rs  redact.rs  startup.rs  tray.rs
tests/: cli.rs
