[package]
name = "shotlite"
version = "0.1.0"
edition = "2024"
description = "Small local screenshot utility."
license = "MIT OR Apache-2.0"
repository = "https://github.com/funwithcthulhu/screenshot-lite"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
directories = "6.0.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
minifb = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"
xcap = "0.9.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
